# voicesmith

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  build_backend.sh  package-lock.json  package.json  webpack.main.config.js
backend/: environment.yml  global_test.py  pyproject.toml  setup.py
backend/voice_smith/: acoustic_training.py  cleaning_run.py  codec_training.py  crawl_inits_wiki.py  create_splits.py  entry.py  finetune_acoustic.py  inference.py  natural_speech_training.py  pretrain_acoustic.py  pretrain_codec.py  sample_splitting_run.py  server.py  sql.py  test.py  test_vocoder.py  text_normalization_run.py  training_run.py  vocoder_training.py
backend/voice_smith/config/: acoustic_fine_tuning_config.py  acoustic_model_config.py  acoustic_pre_training_config.py  configs.py  file_extensions.py  globals.py  langs.py  preprocess_config.py  symbols.py  vocoder_fine_tuning_config.py  vocoder_model_config.py  vocoder_pre_training_config.py
backend/voice_smith/docker/: Dockerfile  api.py  build_image.sh  save_image.py
backend/voice_smith/g2p/: lang2transctibe.txt  parse_dictionary.py  phones.txt  run_prediction.py  run_training.py  text_symbols.txt
backend/voice_smith/handlers/: v2_0_0.py
backend/voice_smith/model/: acoustic_model.py  attention.py  codec.py  discriminators.py  ecapa_tdnn.py  layers.py  natural_speech.py  position_encoding.py  reference_encoder.py  style_predictor.py  univnet.py  vits_orig.py
backend/voice_smith/monotonic_align/: __init__.py  core.c
backend/voice_smith/preprocessing/: align.py  copy_files.py  g2p.py  vad.py  (+11 more)
(+214 files in other folders)
