[tool.poetry]
name = "voice_smith"
version = "0.1.0"
description = ""
authors = ["dunky11 <timv94@zedat.fu-berlin.de>"]
packages = [{include = "voice_smith"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
Flask = "^2.1.2"
Flask-Cors = "3.0.10"
torch = "1.11.0"
torchaudio = "0.11.0"
tgt = "^1.4.4"
g2p-en = "^2.1.0"
psutil = "^5.9.0"
einops = "^0.4.1"
piq = "^0.7.0"
fastdtw = "^0.3.4"
docker = "^5.0.3"
cleanlab = "^2.0.0"
skorch = "^0.11.0"
speechbrain = "^0.5.11"
fire = "^0.4.0"
waitress = "^2.1.1"
numba = "^0.55.1"
    
[tool.poetry.dev-dependencies]
black = "^22.3.0"
wandb = "^0.12.16"
SoundFile = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
